fix: onboarding page layout on small screens

--- a/packages/webapp/src/containers/Setup/SetupSubscription/SetupSubscription.module.scss
+++ b/packages/webapp/src/containers/Setup/SetupSubscription/SetupSubscription.module.scss
@@ -2,6 +2,7 @@
 .root{
   margin: 0 auto;
   padding: 0 40px;
+  padding-right: 20px;
 }
 
 .periodSwitch {
